changed home page to full screen, added flexbox to home screen for placement, fixed text jumping on fade in

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
-@font-face {
-    font-family: "Lora-Regular", serif;
-    src: url("Lora-Regular.ttf")
+body {
+  font-family: 'Lora-Regular', serif;
 }
 
 nav {
+  transition: background-color 0.3s ease;
   background-color: rgba(0,0,0,0.02);
   position: fixed;
   z-index: 10;
@@ -22,19 +22,12 @@ nav ul a {
   background-color: rgba(0,0,0,0.7);
 }
 
-div.navButtons {
+.navButtons {
   width: 100%;
-  font-family: "Lora-Regular", serif;
 }
 
 .background {
-  background-color: white;
-}
-
-body {
-  font-family: 'Lora-Regular', serif;
-  height: 100vh;
-  width: 100%;
+  background-color: rgba(255,255,255,0.98);
 }
 
 img {
@@ -78,20 +71,20 @@ a.brand-logo {
 
 a:hover, i.fa:hover {
   color: #66b9ae;
-  transition: color .25s ease-in-out;
-}
-
-div.title {
-  margin-top: 20%;
+  transition: color .2s ease;
 }
 
 .hide {
   visibility: hidden;
 }
 
+.fader {
+  display: inline-block;
+  max-width: 7em;
+}
+
 .evan {
   font-size: 9em;
-  font-family: 'Alfa Slab One', serif;
 }
 
 .tagline {
@@ -99,12 +92,17 @@ div.title {
 }
 
 #home {
-  height: 75%;
+  display: flex;
+  min-height: 100vh;
   width: 100%;
+  align-items: center;
   background-image: url(../images/pattern.svg);
   background-size: cover;
   background-repeat: no-repeat;
-  padding-top: 4vh;
+}
+
+strong {
+  font-weight: bold;
 }
 
 i {
@@ -117,7 +115,7 @@ i.fa {
   color: #06abfc;
 }
 
-i.fa-wordpress, i.fa-camera-retro, i.fa-flickr {
+.fa-wordpress, .fa-camera-retro, .fa-flickr {
   color: #06abfc;
   font-size: 2.5em;
 }
@@ -187,10 +185,6 @@ div.modal-footer i.fa:hover {
 }
 
 @media (max-width: 768px) {
-  #home {
-    height: 50%;
-  }
-
   .evan {
     font-size: 5em;
   }
@@ -209,10 +203,6 @@ div.modal-footer i.fa:hover {
 }
 
 @media (max-width: 600px) {
-  #home {
-    height: 40%;
-  }
-
   .evan {
     font-size: 4.5em;
   }
